admin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: profertility-admin
  namespace: profertility
spec:
  selector:
    app: profertility-admin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
